--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ pluggy==1.0.0
 psycopg2-binary==2.9.5
 pycodestyle==2.10.0
 pydantic==1.10.2
+PyJWT==2.6.0
 pytest==7.2.1
 python-dotenv==0.21.1
 python-multipart==0.0.5
