--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ aiofiles==22.1.0
 aiosqlite==0.18.0
 anyio==3.6.2
 attrs==22.2.0
+automium==0.2.6
+automium-web==0.1.1
 autopep8==2.0.0
 black==22.10.0
-certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
+config==0.5.1
 dnspython==2.3.0
 email-validator==1.3.1
 fastapi==0.92.0
@@ -15,6 +17,9 @@ h11==0.14.0
 httptools==0.5.0
 idna==3.4
 iniconfig==2.0.0
+itsdangerous==2.1.2
+legacy==0.1.6
+MarkupSafe==2.1.2
 mypy-extensions==0.4.3
 packaging==23.0
 passlib==1.7.4
@@ -26,7 +31,7 @@ pycodestyle==2.10.0
 pydantic==1.10.5
 PyJWT==2.6.0
 pytest==7.2.1
-python-dotenv==0.21.1
+python-dotenv==1.0.0
 python-multipart==0.0.5
 PyYAML==6.0
 requests==2.28.2
@@ -40,9 +45,11 @@ starlette==0.25.0
 tomli==2.0.1
 typing_extensions==4.4.0
 urllib3==1.26.14
+users==1.0.dev0
 uuid==1.30
 uvicorn==0.20.0
 uvloop==0.17.0
 watchfiles==0.18.1
 websockets==10.4
+Werkzeug==2.2.3
 zxcvbn==4.4.28
